[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "subfeed"
version = "0.1.1"
description = "High-throughput I/O coordinator for feeding persistent subprocesses."
authors = ["Ben Skubi <skubi@ohsu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "subfeed", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "*"
hypothesis = "*"